<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.shade</groupId>
    <artifactId>decima</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <scm>
        <connection>scm:git:https://github.com/ShadelessFox/decima</connection>
        <developerConnection>scm:git:https://github.com/ShadelessFox/decima</developerConnection>
        <url>https://github.com/ShadelessFox/decima</url>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>bundle-lwjgl</module>
        <module>decima-app</module>
        <module>decima-core</module>
        <module>decima-ext-model-exporter</module>
        <module>decima-ext-model-viewer</module>
        <module>decima-ext-shader-viewer</module>
        <module>decima-ext-texture-viewer</module>
        <!--<module>decima-game-death-stranding</module>-->
        <module>decima-game-horizon-forbidden-west</module>
        <!--<module>decima-game-horizon-zero-dawn</module>-->
        <!--<module>decima-game-horizon-zero-dawn-remastered</module>-->
        <module>decima-game-killzone4</module>
        <module>decima-game-killzone3</module>
        <module>decima-game-until-dawn</module>
        <module>decima-model</module>
        <module>decima-rtti</module>
        <module>decima-rtti-generator</module>
        <module>decima-ui</module>
        <module>platform-model</module>
        <module>platform-ui</module>
        <module>platform-util</module>
    </modules>

    <properties>
        <maven.compiler.source>24</maven.compiler.source>
        <maven.compiler.target>24</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Project version -->
        <revision>0.1.26</revision>

        <!-- Dependency versions -->
        <flatlaf.version>3.6</flatlaf.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Internal dependencies -->
             <dependency>
                <groupId>com.shade</groupId>
                <artifactId>bundle-lwjgl</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.shade</groupId>
                <artifactId>decima-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.shade</groupId>
                <artifactId>decima-ext-model-exporter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.shade</groupId>
                <artifactId>decima-ext-model-viewer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.shade</groupId>
                <artifactId>decima-ext-shader-viewer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.shade</groupId>
                <artifactId>decima-ext-texture-viewer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!--<dependency>
                <groupId>com.shade</groupId>
                <artifactId>decima-game-death-stranding</artifactId>
                <version>${project.version}</version>
            </dependency>-->
            <dependency>
                <groupId>com.shade</groupId>
                <artifactId>decima-game-horizon-forbidden-west</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!--<dependency>
                <groupId>com.shade</groupId>
                <artifactId>decima-game-horizon-zero-dawn</artifactId>
                <version>${project.version}</version>
            </dependency>-->
            <!--<dependency>
                <groupId>com.shade</groupId>
                <artifactId>decima-game-horizon-zero-dawn-remastered</artifactId>
                <version>${project.version}</version>
            </dependency>-->
            <dependency>
                <groupId>com.shade</groupId>
                <artifactId>decima-game-killzone3</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.shade</groupId>
                <artifactId>decima-game-killzone4</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.shade</groupId>
                <artifactId>decima-game-until-dawn</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.shade</groupId>
                <artifactId>decima-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.shade</groupId>
                <artifactId>decima-rtti</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.shade</groupId>
                <artifactId>decima-rtti-generator</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.shade</groupId>
                <artifactId>decima-ui</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.shade</groupId>
                <artifactId>platform-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.shade</groupId>
                <artifactId>platform-ui</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.shade</groupId>
                <artifactId>platform-util</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- External dependencies -->
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-bom</artifactId>
                <version>3.3.6</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>tinybcdec</artifactId>
                <version>0.1.1</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>1.5.18</version>
            </dependency>
            <dependency>
                <groupId>com.formdev</groupId>
                <artifactId>flatlaf</artifactId>
                <version>${flatlaf.version}</version>
            </dependency>
            <dependency>
                <groupId>com.formdev</groupId>
                <artifactId>flatlaf-extras</artifactId>
                <version>${flatlaf.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.weisj</groupId>
                <artifactId>jsvg</artifactId>
                <version>1.7.2</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>2.13.0</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.google.errorprone</groupId>
                        <artifactId>error_prone_annotations</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.miglayout</groupId>
                <artifactId>miglayout-swing</artifactId>
                <version>11.4.2</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>4.7.6</version>
            </dependency>
            <dependency>
                <groupId>io.github.classgraph</groupId>
                <artifactId>classgraph</artifactId>
                <version>4.8.179</version>
            </dependency>
            <dependency>
                <groupId>org.joml</groupId>
                <artifactId>joml</artifactId>
                <version>1.10.7</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>2.0.17</version>
            </dependency>

            <!-- Test dependencies -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.12.2</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>nl.jqno.equalsverifier</groupId>
                <artifactId>equalsverifier</artifactId>
                <version>3.19.3</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.17</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>nl.jqno.equalsverifier</groupId>
            <artifactId>equalsverifier</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.5.2</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
